Update index.html and add pattern/index.html for buffer overflow pattern generation

--- a/tools/index.html
+++ b/tools/index.html
@@ -28,8 +28,6 @@
         <h2>Counter-Strike</h2>
         <ul>
           <br><li><a href="https://speedrun.eu/files/CS-Steam_6153.rar">Counter-Strike 2013 ( Version 6153 )</a></li>
-          <br><li><a href="https://disk.yandex.ru/d/ZnVji7i0cyQBNg">Counter-Strike 2009 ( Version 4554 )</a></li>
-          <li><a href="https://nc.arbe.cc/index.php/s/RmypokaLzCBELKy?path=%2F">Counter-Strike All Surf Map</a></li>
           <li><a href="https://disk.yandex.com.tr/d/2JbdxokzX5fVsg">Counter-Strike Movie Tools</a></li>
         </ul>
         <a target="_blank" href="https://telegram.me/lujiangz" class="more">for more files<svg viewBox="0 0 10 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path class="arrow" d="M1.01362083,12.9421826 L1,15.6012598 L9.21426767,8.3533766 L1.07301897,1.34639246 L1.05985086,3.91708947 L6.21426767,8.3533766 L1.01362083,12.9421826 Z"></path></svg></a>
@@ -38,10 +36,16 @@
         <h2>Windows</h2>
         <ul>
           <br>
-            <li><a href="https://fastupload.io/4880086fa31a78da">Visual C++ All Pack</a></li>  
-            <li><a href="https://fastupload.io/0fd7ed6506576697">DirectX Library</a></li>  
+            <li><a href="https://de1-dl.techpowerup.com/files/KcmxvjcdGUe5mBakf4lN-w/1761671772/Visual-C-Runtimes-All-in-One-Jul-2025.zip">Visual C++ All Pack</a></li>  
+            <li><a href="https://pixeldrain.com/api/file/b8Ky1gpX?download">DirectX Library</a></li>  
         </ul>
          </section>
+       <section id="ecole42">
+       <h2>42 Ecole</h2>
+       <ul>
+         <br><li><a href="pattern/index.html">Buffer Overflow Pattern Finder</a></li>
+       </ul>
+       </section>
     </div>
   </div>
   <svg id="page-stripes" class="full-size" width="100%" height="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"></svg>
